src/content/docs/sdk/flutter/v4/features/att.mdx
---
title: Set up App Tracking Transparency
description: Configure your app to use Apple's App Tracking Transparency framework
slug: en/sdk/flutter/v4/features/att
versions:
   - label: v5
     value: v5
     default: true
   - label: v4
     value: v4
redirects:
   v5: /en/sdk/flutter/features/att
---

If you want to record the device's ID for Advertisers (IDFA), you must display a prompt to get your user's authorization. To do this, you need to include Apple's App Tracking Transparency (ATT) framework in your app. The Adjust SDK stores the user's authorization status and sends it to Adjust's servers with each request.

## Authorization statuses {#authorization-statuses}

<Table>

| Status                                              | Code | Description                                                             |
| --------------------------------------------------- | ---- | ----------------------------------------------------------------------- |
| `ATTrackingManagerAuthorizationStatusNotDetermined` | `0`  | The user hasn't responded to the access prompt yet                      |
| `ATTrackingManagerAuthorizationStatusRestricted`    | `1`  | Access to app-related data is blocked at the device level               |
| `ATTrackingManagerAuthorizationStatusDenied`        | `2`  | The user has denied access to app-related data for device measurement   |
| `ATTrackingManagerAuthorizationStatusAuthorized`    | `3`  | The user has approved access to app-related data for device measurement |

</Table>

<Callout type="note">

You might receive a status code of `-1` if the SDK is unable to retrieve the ATT status.

</Callout>

## ATT authorization wrapper {#att-authorization-wrapper}

<CodeBlock title="Method signature">

```dart
static Future<num> requestTrackingAuthorizationWithCompletionHandler() async
```

</CodeBlock>

The Adjust SDK contains a wrapper around [Apple's `requestTrackingAuthorizationWithCompletionHandler` method](https://developer.apple.com/documentation/apptrackingtransparency/attrackingmanager/3547037-requesttrackingauthorizationwith). You can use this wrapper if you don't want to customize the ATT prompt.

The callback method triggers when your user responds to the consent dialog. This method sends the user's consent status code to Adjust's servers. You can define responses to each status code within the callback function.

You must specify text content for the ATT request dialog. To do this, add your text to the `NSUserTrackingUsageDescription` key in your `Info.plist` file.

<Callout type="tip">

The Adjust SDK also records the consent status if you use a custom prompt. If you show your prompt before initialization, the SDK sends the status with the install event. If you show it after initialization, the SDK sends the status to Adjust's servers as soon as the user updates it.

</Callout>

```dart
if (Platform.isIOS) {
   Adjust.requestTrackingAuthorizationWithCompletionHandler().then((status) {
      switch (status) {
         case 0:
            // ATTrackingManagerAuthorizationStatusNotDetermined case
            break;
         case 1:
            // ATTrackingManagerAuthorizationStatusRestricted case
            break;
         case 2:
            // ATTrackingManagerAuthorizationStatusDenied case
            break;
         case 3:
            // ATTrackingManagerAuthorizationStatusAuthorized case
            break;
      }
   });
}
```

### Example {#example}

This example shows how to log a human-readable description of the user's authorization status when they interact with a prompt.

<CodeBlock title="main.dart">

```dart
import 'package:adjust_sdk/adjust.dart';
import 'package:flutter/cupertino.dart';
import 'package:flutter/material.dart';
import 'package:flutter/services.dart';

initPlatformState() async {
   AdjustConfig config =
      new AdjustConfig('{YourAppToken}', AdjustEnvironment.sandbox);
      config.logLevel = AdjustLogLevel.verbose;

Adjust.requestTrackingAuthorizationWithCompletionHandler().then((status) {
      print('[Adjust]: Authorization status update!');
      switch (status) {
         case 0:
         print(
            'The user has not responded to the access prompt yet.');
         break;
         case 1:
         print(
            'Access to app-related data is blocked at the device level.');
         break;
         case 2:
         print(
            'The user has denied access to app-related data for device measurement.');
         break;
         case 3:
         print(
            'The user has approved access to app-related data for device measurement.');
         break;
      }
   });

   Adjust.start(config);
}

```

</CodeBlock>

## Get current authorization status {#get-current-authorization-status}

<CodeBlock title="Method signature">

```dart
static Future<int> getAppTrackingAuthorizationStatus() async
```

</CodeBlock>

You can retrieve a user's current authorization status at any time. Call the `getAppTrackingAuthorizationStatus` method to return the authorization status code as an **integer**.

```dart
Adjust.getAppTrackingAuthorizationStatus();
```

### Example {#example-1}

This example shows how to collect the user's authorization status and convert it to a `String`. This information is assigned to a variable called `authorizationStatus` and passed as a session partner parameter with the key `"status"`.

```dart
String authorizationStatus = Convert.ToString(Adjust.getAppTrackingAuthorizationStatus());
Adjust.addSessionPartnerParameter("status", authorizationStatus);
```

## Check for authorization status changes {#check-for-authorization-status-changes}

<CodeBlock title="Method signature">

```dart
static void checkForNewAttStatus()
```

</CodeBlock>

If you use a custom ATT prompt, you need to inform the Adjust SDK of changes to the user's authorization status. Call the `checkForNewAttStatus` method to send the authorization status to Adjust's servers.

```dart
Adjust.checkForNewAttStatus();
```

## Custom prompt timing {#custom-prompt-timing}

<CodeBlock title="Property declaration">

```dart
num? attConsentWaitingInterval;
```

</CodeBlock>

If your app includes an onboarding process or a tutorial, you may want to delay sending your user's ATT consent status until after the user has completed this process. To do this, you can set the `attConsentWaitingInterval` property to delay the sending of data for **up to 120 seconds** to give the user time to complete the initial onboarding. After the timeout ends or the user sets their consent status, the SDK sends all information it has recorded during the delay to Adjust's servers along with the user's consent status.

<Callout type="note">

If the user closes the app before the timeout ends, or before they select their consent status, the timeout restarts when they reopen the app.

</Callout>

```dart
AdjustConfig adjustConfig = new AdjustConfig('{YourAppToken}', AdjustEnvironment.Sandbox);
//...
adjustConfig.attConsentWaitingInterval = 30;
//...
Adjust.start(adjustConfig);
```
